--- a/src/Interaces/JFrameTorneo.form
+++ b/src/Interaces/JFrameTorneo.form
@@ -34,6 +34,10 @@
                       <Component id="registrarseTorneo" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
                   </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="asignarSede" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                   <Component id="jLabel1" pref="167" max="32767" attributes="0"/>
@@ -58,13 +62,14 @@
                   <Component id="jLabel1" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                   <Component id="registrarseTorneo" alignment="3" min="-2" pref="67" max="-2" attributes="0"/>
               </Group>
-              <Group type="103" groupAlignment="0" attributes="0">
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" pref="246" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" pref="241" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
+                      <Component id="asignarSede" min="-2" pref="39" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="botonAtras" min="-2" pref="47" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="112" max="-2" attributes="0"/>
@@ -82,6 +87,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="INSCRIBIRSE A UN TORNEO"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="registrarseTorneoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="etiqTitulo">
       <Properties>
@@ -151,6 +159,17 @@
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Listado de partidas"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="asignarSede">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Arial" size="18" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="ASIGNAR SEDE DE UN TORNEO"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="asignarSedeActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
